fix: header z-index

--- a/assets/styling/main.sass
+++ b/assets/styling/main.sass
@@ -164,6 +164,7 @@ header
   top: 0
   left: 0
   right: 0
+  z-index: 1
   &.list .list-Item
     padding-top: var(--spacing-two) !important
 
